[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/PilotCommandHalftoneItalic-w15Bx.otf" type="DynamicFontData" id=1]
[ext_resource path="res://hud/game_hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="game_hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="lap" type="RichTextLabel" parent="."]
margin_left = -6.0
margin_top = -40.0
margin_right = 266.0
margin_bottom = 112.0
custom_colors/default_color = Color( 0.819608, 0.188235, 0.188235, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[shake rate=4 level=15] 
 Lap:"
text = " 
 Lap:"

[node name="lap_num" type="RichTextLabel" parent="."]
margin_left = 130.0
margin_right = 529.0
margin_bottom = 65.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake rate=4 level=15]1 / 3"
text = "1 / 3"

[node name="time" type="RichTextLabel" parent="."]
margin_left = -8.0
margin_top = 21.0
margin_right = 264.0
margin_bottom = 173.0
custom_colors/default_color = Color( 0.819608, 0.188235, 0.188235, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[shake rate=4 level=15] 
 Time:"
text = " 
 Time:"

[node name="lap_time" type="RichTextLabel" parent="."]
margin_left = 128.0
margin_top = 61.0
margin_right = 527.0
margin_bottom = 126.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake rate=4 level=15]00:00:00"
text = "00:00:00"

[node name="time2" type="RichTextLabel" parent="."]
margin_left = -8.0
margin_top = 72.0
margin_right = 336.0
margin_bottom = 224.0
custom_colors/default_color = Color( 0.819608, 0.188235, 0.188235, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[shake rate=4 level=15]  
 Last Time:"
text = "  
 Last Time:"

[node name="last_lap" type="RichTextLabel" parent="."]
margin_left = 256.0
margin_top = 112.0
margin_right = 655.0
margin_bottom = 177.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[shake rate=4 level=15]00:00:00"
text = "00:00:00"
